# Devops-Launchboard-with-CI-CD

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: build-and-test.yml  deploy-eks.yml  deploy-k8s.yml  docker-build-push-hub.yml  docker-build-push.yml  rollback-eks.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260515_0001_create_launchboard_tables.py
backend/app/: __init__.py  db.py  main.py
backend/app/api/: deployments.py  health.py
backend/app/core/: config.py
backend/app/models/: __init__.py  deployment.py
backend/app/schemas/: deployment.py
backend/app/services/: seed.py
deploy/kubernetes/base/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secret.yaml
deployment/phase-07-cicd-self-hosted/phase-7-cicd-jenkins/: Dockerfile.backend  Dockerfile.frontend  Jenkinsfile  Jenkinsfile.rollback
deployment/phase-6-kubeadm/k8s/: launchboard-backend-deployment.yaml
deployment/phase-7-cicd/: Dockerfile.backend  Dockerfile.frontend  Jenkinsfile  kind-config.yaml  nginx-frontend.conf
deployment/phase-7-cicd/eks-k8s/: configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  launchboard-backend-deployment.yaml  (+9 more)
docs/: deployment-guide.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/scripts/: verify-canvas.mjs
frontend/src/: App.tsx  main.tsx
(+30 files in other folders)
