[project]
name = "devops-launchboard-api"
version = "0.1.0"
description = "FastAPI backend for a 3-tier DevOps teaching application"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "fastapi[standard]>=0.115.0",
  "greenlet>=3.1.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.35",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

